[package]
name = "openaction"
description = "A crate for creating plugins for the OpenAction API"
categories = [
	"api-bindings",
	"asynchronous",
	"data-structures",
	"web-programming::websocket",
]
authors = ["nekename"]
version = "2.6.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenActionAPI/rust"
homepage = "https://openaction.amankhanna.me"

[dependencies]
thiserror = "2"
async-trait = "0.1"
dashmap = "6"
futures-util = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "sync"] }
tokio-tungstenite = "0.28"
